# NAMDRunner

./: .gitattributes  .gitignore  .prettierrc  CLAUDE.md  LICENSE  README.md  e2e-test.js  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.js  vite.config.test.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_escape.rs
src-tauri/cluster/: alpine.json
src-tauri/src/: cluster.rs  connection_utils.rs  integration_tests.rs  lib.rs  logging.rs  main.rs  mock_state.rs  mode_switching.rs  retry.rs  security.rs  security_tests.rs  validation.rs  validation_traits.rs
src-tauri/src/automations/: common.rs  errors.rs  file_operations.rs  job_completion.rs  job_creation.rs  job_deletion.rs  job_submission.rs  job_sync.rs  mod.rs  progress.rs
src-tauri/src/commands/: app.rs  cluster.rs  connection.rs  database.rs  files.rs  helpers.rs  jobs.rs  mod.rs  system.rs  templates.rs  validation.rs
src-tauri/src/database/: helpers.rs  job_repository.rs  mod.rs
src-tauri/src/demo/: mod.rs  mode.rs  state.rs
src-tauri/src/security/: credentials.rs  input.rs  mod.rs  shell.rs
src-tauri/src/slurm/: commands.rs  mod.rs  namd_constants.rs  script_generator.rs  status.rs
src-tauri/src/ssh/: commands.rs  connection.rs  directory_structure.rs  errors.rs  manager.rs  metadata.rs  mod.rs  paths.rs  sftp.rs  test_utils.rs
src-tauri/src/templates/: mod.rs  renderer.rs  types.rs  validation.rs
src-tauri/src/types/: commands.rs  core.rs  (+2 more)
src-tauri/templates/: explicit_solvent_npt_v1.json  vacuum_optimization_v1.json
(+250 files in other folders)
