[package]
name = "namdrunner"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "namdrunner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
ssh2 = "0.9"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
anyhow = "1.0"
lazy_static = "1.4"
once_cell = "1.0"
rand = "0.8"
secstr = "0.5"
log = "0.4"
async-trait = "0.1"
tempfile = "3.0"
regex = "1.0"
rfd = "0.15"

# Windows-specific dependencies for static linking
[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.0"

